# UBPD

./: .gitignore  .placeholder  README.md  evaluate.py  main.py  pyproject.toml  scripts.py  test.py
src/: const.py  dataset.py  evaluate.py  helper.py  preprocessing.py  train.py  train_utils.py
src/models/: unet.py  unetpp.py
src/notebooks/: analysis.ipynb  evaluate.ipynb  main.ipynb  train_separate.ipynb
src/trainer/: __init__.py  base.py  cv.py  single.py
tests/: test_helper.py
wandb/: latest-run
wandb/run-20251007_174754-4owcc7dg/: run-4owcc7dg.wandb
wandb/run-20251007_174754-4owcc7dg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251007_175036-dn6dsbhj/: run-dn6dsbhj.wandb
wandb/run-20251007_175036-dn6dsbhj/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251007_175319-s36sv1p5/: run-s36sv1p5.wandb
wandb/run-20251007_175319-s36sv1p5/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251007_175613-4fh2q3pi/: run-4fh2q3pi.wandb
wandb/run-20251007_175613-4fh2q3pi/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20251007_175826-ral9a9xk/: run-ral9a9xk.wandb
wandb/run-20251008_061933-cpl8a3fj/: run-cpl8a3fj.wandb
wandb/run-20251008_061950-4t98vp1f/: run-4t98vp1f.wandb
wandb/run-20251008_064026-m6s1z0xd/: run-m6s1z0xd.wandb
wandb/run-20251008_065806-yqilyyfn/: run-yqilyyfn.wandb
wandb/run-20251008_071944-kzhoc9fd/: run-kzhoc9fd.wandb
wandb/run-20251008_073856-zounm13z/: run-zounm13z.wandb
(+975 files in other folders)
